--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -238,7 +238,7 @@ seo:
 {% include who-its-for.html %}
 
 <!-- Excperience -->
-<section class="my-10p">
+<section class="mt-10p">
   <!-- 2 Columns -->
   <div class="grid md:grid-cols-2">
 
@@ -256,18 +256,20 @@ seo:
 </section>
 
 <!-- How It Works -->
-<section>
+<section class="text-center section-padding">
   <div>
-    <h2>How it Works</h2>
-    <p>This 3-Month Program follows the LTM Model. Each month we will dive deep into one of the Pillars of Connection. All weekly practices and transmissions will focus on a different aspect of the Pillar.</p>
+    <h2 class="heading-lg-sans text-feature">How it Works</h2>
+    <div class="lg:w-[80%] mx-auto mb-8">
+      <p>This 3-Month Program follows the LTM Model. Each month we will dive deep into one of the Pillars of Connection. All weekly practices and transmissions will focus on a different aspect of the Pillar.</p>
+    </div>
   </div>
 
-  <div class="grid grid-cols-3">
+  <div class="grid grid-cols-3 gap-12">
 
     <!-- Month 1 -->
     <div>
-      <h3>Month 1</h3>
-        <p>Connection to the Physical Body</p>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Month 1</h3>
+        <p class="uppercase text-feature">Connection to the Physical Body</p>
         <p>Creating Safety in the Physical Body</p>
         <p>Meeting the Body as if for the first time</p>
         <p>Discovering what the body is capable of</p>
@@ -276,8 +278,8 @@ seo:
 
     <!-- Month 2 -->
     <div>
-      <h3>Month 2</h3>
-      <p>Connection to the Energy Body</p>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Month 2</h3>
+      <p class="uppercase text-feature">Connection to the Energy Body</p>
       <p>Creating Safety in the Emotional Body</p>
       <p>Releasing Stagnation and Energetic Transmutation</p>
       <p>Embracing the Ugly and Shadow Sourcing</p>
@@ -286,8 +288,8 @@ seo:
 
     <!-- Month 3 -->
     <div>
-      <h3>Month 3</h3>
-      <p>Connection to the Transpersonal Body</p>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Month 3</h3>
+      <p class="uppercase text-feature">Connection to the Transpersonal Body</p>
       <p>Creating Healthy boundaries in all relationships</p>
       <p>Curating intentionality in your environment</p>
       <p>Standing in Your Truth and Speaking with confidence</p>
@@ -296,7 +298,7 @@ seo:
     </div>
   </div>
 
-  <div>
+  <div class="mt-8 lg:w-[80%] mx-auto">
     <p>This program is designed to be a Holistic Healing experience where we work with the mind-body-spirit connection, integrating mindfulness meditation, physical activation, and spiritual liberation along with theory-based knowledge of somatic healing and embodiment.</p>
   </div>
 
