edits in whatsap

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -2,11 +2,11 @@
 layout: default
 slug: liberation-through-movement-mentorship
 title: Liberation Through Movement Mentorship
-description_html: 
+description_html: Personal Mentorship Program
 featured-image: /uploads/images/manamei-24.jpg
 heading:
   title: Liberation Through Movement Mentorship
-  subtitle: Mentorship & Facilitator Training
+  subtitle: Personal Mentorship Program
   description_html: 
   button-enroll:
     text: Join the Waitlist
@@ -117,15 +117,12 @@ investment:
   includes:
     heading: What's included
     list:
-      - list-item_html: Weekly pre-recorded audio & video practices (plus lifetime access to all curriculum)
+      - list-item_html: Weekly pre-recorded practices (plus lifetime access to all curriculum)
       - list-item_html: 2 per month Live Group Transmission with Mana Mei
-      - list-item_html: Monthly Guest Facilitator Experiences
       - list-item_html: 1 per month Guest Facilitator Experience
-      - list-item_html: Each month, you will be encouraged to join the <span class="text-feature">weekly Live Group Transmission</span>, where you can share about your journey, connect with the other women in the program, and receive additional knowledge on the topics being covered that week.
       - list-item_html: Every month you will be invited to book a <strong>1:1 Mentoring call</strong> with Mana Mei (45-minutes)
       - list-item_html: You will receive access to the <span class="text-feature italic">exclusive Online Mentorship Haven</span>, where you will have life-time access to all course material.
       - list-item_html: You will also be held in an exclusive Mentorship Group Community through Telegram where you can connect with the other women in the program and share inspiration and support with each other.
-      - list-item_html: As well, you will receive free life-time membership to the Liberation Through Movement Online Community & LTM Workshop Library where you will have access to all of Mana Mei’s past LTM Masterclasses, Workshops, and experiences!! A massive resource to keep diving into your embodied education.
   pricing:
     pay-in-full:
       heading: Pay in full
@@ -314,21 +311,11 @@ seo:
 
   <div class="grid lg:grid-cols-3 gap-8 lg:mt-10p">
       <!-- Left Column (text) -->
-      <div class="lg:col-span-2 p-10p">
+      <div class="lg:col-span-2 p-10p flex justify-center items-center">
           <div>
               <p>This 3-month journey is a time to turn your attention inwards, a time of introspection and connecting deeply with your inner landscape.</p>
               <p>Each month, you will be invited to devote yourself to your inner work, prioritize YOU and the process of awakening self awareness at all levels.</p>
-              <p>You do this by committing to</p>
-              <ul class="ml-4 text-feature">
-                <li>Daily pre-recorded embodied movement and somatic dance practices</li>
-                <li>Weekly journaling prompts</li>
-                <li>Weekly live group transmissions with Mana Mei & Guest Facilitators</li>
-                <li>Monthly POD Support Calls</li>
-                <li>1:1 Mentoring calls</li>
-              </ul> 
-              <p class="mt-4">Stepping onto this path is stepping into a new way of being. One that prioritizes creating sacred space every day to dive into deep, uninterrupted, vulnerable presence with yourself.</p>
-              <p>Each month consists of 3 weeks of content, and 1 week of integration.</p>
-              <p>The Integration weeks are intended to be a time when you are free to replenish and nourish your self, catch up on missed lectures and practices, and prepare yourself to step into the next month.</p> 
+              <p>Stepping onto this path is stepping into a new way of being. One that prioritizes creating sacred space every day to dive into deep, uninterrupted, vulnerable presence with yourself.</p>
           </div>
       </div>
 
