seo 4-month to 3-month

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -20,7 +20,7 @@ heading:
   overlay_style: medium
 brochure-1: 
   heading: Download the Mentorship Brochure
-  description_html: Unravel the essence of this unique 4-month journey curated by Mana Mei.
+  description_html: Unravel the essence of this unique 3-month journey curated by Mana Mei.
   background-image: 
     background_image: 
     image_focus: 
@@ -63,7 +63,7 @@ experience:
     <p class="text-feature">You will always have a way to come back home to yourself and your power, feeling deeply safe and expansively free.</p>
 inside-the-course:
   heading: Inside the LTM Mentorship
-  description_html: The 4-month program follows the Liberation Through Movement Model, with each month dedicated to one of the 3 Pillars of Connection, culminating in Authentic Space Holding and LTM Facilitation Training. The journey is a deep exploration of your inner world, combining daily practices, weekly transmissions, and monthly mentoring calls.
+  description_html: The 3-month program follows the Liberation Through Movement Model, with each month dedicated to one of the 3 Pillars of Connection, culminating in Authentic Space Holding. The journey is a deep exploration of your inner world, combining daily practices, weekly transmissions, and monthly mentoring calls.
   module:
     - title: Phase 1 - Connection to the Physical Body
       description_html: <ul><li>Creating Safety</li><li>Remeeting the Body</li><li>Cultivating Self-Love</li></ul>
@@ -209,8 +209,8 @@ brochure-2:
   border: border-y border-feature
 seo: 
   title: Liberation Through Movement Mentorship & Facilitator Training
-  description: This unique 4-month program blends classical dance, somatic movement, and expressive dance to harmonize feminine and masculine energies, fostering self-awareness, peace, and authentic leadership. 
-  keywords: Liberation Through Movement, mentorship, empowerment, leadership, feminine energy, masculine harmony, somatic movement, expressive dance, Mana Mei, embodied movement facilitator training
+  description: This unique 3-month program blends classical dance, somatic movement, and expressive dance to harmonize feminine and masculine energies, fostering self-awareness, and peace.
+  keywords: Liberation Through Movement, mentorship, empowerment, feminine energy, masculine harmony, somatic movement, expressive dance, Mana Mei,
   social_image: /uploads/images/manamei-24.jpg
   hide-from-google: false
 ---
@@ -304,6 +304,11 @@ seo:
 
   <div class="mt-12 lg:w-[80%] mx-auto text-center px-10p">
     <p>This program is designed to be a Holistic Healing experience where we work with the mind-body-spirit connection, integrating mindfulness meditation, physical activation, and spiritual liberation along with theory-based knowledge of somatic healing and embodiment.</p>
+
+    <!-- CTA -->
+    <div class="flex justify-center mt-8">
+      <a href="{{page.investment.button.url}}" class="button">{{page.investment.button.text}}</a>
+    </div>
   </div>
 
   <!-- Mobile Image (hidden on desktop) -->
