apply now ltm mentorship test

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -9,8 +9,8 @@ heading:
   subtitle: Personal Mentorship Program
   description_html: 
   button-enroll:
-    text: Join the Waitlist
-    url: /mentorship-waitlist.html
+    text: Apply Now
+    url: /mentorship-apply.html
   button-video:
     show: true
     type: youtube
@@ -132,8 +132,8 @@ investment:
       heading: Payment plan
       price: $975 x 3 months
   button: 
-    url: /mentorship-waitlist.html
-    text: Join the Waitlist
+    url: /mentorship-apply.html
+    text: Apply Now
   border: 
 faq:
   heading: Frequently asked questions
@@ -191,10 +191,10 @@ faq:
     image_focus: bottom right
 cta:
   heading: Think this may be the perfect fit for you? 
-  description_html: The next step is to join the waitlist! By doing this, you'll be among the first to know when we welcome new applicants.
+  description_html: The next step is to apply!
   button:
-    text: Join the Waitlist
-    url: /mentorship-waitlist.html
+    text: Apply Now
+    url: /mentorship-apply.html
   background-image:
     background_image: /uploads/images/manamei-64.jpg
     background-position: bottom
