removed women who feel

--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -10,7 +10,7 @@ heading:
   description_html: 
   button-enroll:
     text: Apply Now
-    url: /mentorship-apply.html
+    url: /mentorship-application.html
   button-video:
     show: true
     type: youtube
@@ -132,7 +132,7 @@ investment:
       heading: Payment plan
       price: $975 x 3 months
   button: 
-    url: /mentorship-apply.html
+    url: /mentorship-application.html
     text: Apply Now
   border: 
 faq:
@@ -194,7 +194,7 @@ cta:
   description_html: The next step is to apply!
   button:
     text: Apply Now
-    url: /mentorship-apply.html
+    url: /mentorship-application.html
   background-image:
     background_image: /uploads/images/manamei-64.jpg
     background-position: bottom
