--- a/women-who-feel.html
+++ b/women-who-feel.html
@@ -94,7 +94,7 @@ seo:
   description: A movement masterclass with Mana Mei, International Women's Embodiment Mentor
   keywords: Mana Movement, feminine embodiment, women's empowerment, dance and movement, Mana Mei, creative expression, embodiment practices, embodied movement, authentic dance
   social_image: /uploads/images/women-who-feel-1.jpg
-  hide-from-google: false
+  hide-from-google: true
 ---
 <!-- Course Heading -->
 <section class="bg-image-style min-h-[90vh] p-5p flex flex-col justify-between items-center
