--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -2,11 +2,11 @@
 layout: default
 slug: liberation-through-movement-mentorship
 title: Liberation Through Movement Mentorship
-description_html: Personal Mentorship Program
+description_html: Personal Embodiment & Facilitation Program
 featured-image: /uploads/images/manamei-24.jpg
 heading:
   title: Liberation Through Movement Mentorship
-  subtitle: Personal Mentorship Program
+  subtitle: Personal Embodiment & Facilitation Program
   description_html: 
   button-enroll:
     text: Apply Now
@@ -126,11 +126,11 @@ investment:
   pricing:
     pay-in-full:
       heading: Pay in full
-      price: $3,700
+      price: $3,500
     payment-plan:
       show: true
       heading: Payment plan
-      price: $975 x 4 months
+      price: $950 x 4 months
   button: 
     url: /mentorship-application.html
     text: Apply Now
