--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -256,6 +256,10 @@ seo:
 </section>
 
 
+<!-- How it Works -->
+{% include how-it-works.html %}
+
+
 <!-- Testimonials -->
 {% include testimonials.html %}
 
