--- a/liberation-through-movement-mentorship.html
+++ b/liberation-through-movement-mentorship.html
@@ -121,7 +121,7 @@ investment:
       - list-item_html: 2 per month Live Group Transmission with Mana Mei
       - list-item_html: 1 per month Guest Facilitator Experience
       - list-item_html: 3 weeks of Focused Faciltiation Training, including weekly Live Transmissions with Mana Mei, weekly POD Practice Teaching Sessions, and weekly pre-recorded Theory Videos
-      - list-item_html: <span class="text-feature italic">Weekly Live Group Transmissions</span>, where you can share about your journey, connect with the other women in the program, and receive additional knowledge on the topics being covered that week.
+      - list-item_html: Weekly Live Group Transmissions, where you can share about your journey, connect with the other women in the program, and receive additional knowledge on the topics being covered that week.
       - list-item_html: 2 <strong>1:1 Mentoring call with Mana Mei</strong> (45-minutes)
       - list-item_html: You will receive access to the <span class="text-feature italic">exclusive Online Mentorship Haven</span>, where you will have life-time access to all course material.
       - list-item_html: You will also be held in an exclusive Mentorship Group Community through Telegram where you can connect with the other women in the program and share inspiration and support with each other.
